# hua

./: .gitignore  Cargo.toml  LICENSE
src/: color.rs  figure.rs  lib.rs  preview.rs
src/backend/: base.rs  canvas.rs  mod.rs
src/backend/drawing/: line.rs  mod.rs  rect.rs
src/drawing/: canvas.rs  mod.rs  shape.rs
src/elements/: axis.rs  fig.rs  mod.rs
src/styles/: color.rs  mod.rs  shape.rs
