[package]
authors = ["jingch"]
edition = "2018"
license = "MIT"
name = "hua"
version = "0.1.0"

[dependencies]
# image = "0.23.12"
num-traits = "0.2.14"
png = "0.16.8"
# ttf-parser = "0.10.1"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# web-sys = {version = "0.3", features = ['HtmlCanvasElement']}
